# ActiveMem

ActiveMemDetours/: .gitignore  CMakeLists.txt  run.bat
ActiveMemDetours/lib/: dbghelp.lib  detours.lib  syelog.lib
ActiveMemDetours/src/: main.cpp  main.def  true_funcs.h  util.h
ActiveMemDetours/srclib/syelog/: syelog.cpp
ActiveMemDetours/srclib/syelogd/: syelogd.cpp
ActiveMemDetours/test/VirtualAllocTest/: main.cpp
ActiveMemDetours/tools/convert_winapi_defs/: main.py
ActiveMemMonitor/: main.js  main.ts  package-lock.json  package.json
ActiveMemMonitor/static/: index.html  package-lock.json  package.json
ActiveMemMonitor/static/js/: cytoscape.min.js
